Oct 18, 2023
  added handling of xrefs: 'cancercelllines', 'GeneCopoeia', 'Ubigene'

Oct 09, 2023
  renamed 'master' to 'main'

Jul 10, 2023
  config: changed source from ftp://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo
    to https://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo

Jul 06, 2023
  parser: fixed handling of some comments

Apr 18, 2023
  parser: added 'NIHhESC' to list of ignored XDB IDS
  parser: fixed handling of some comments

Jan 24, 2023
  updated build.gradle to be gradle 6.x + compatible

Jan 06, 2023
  parser: added 'dbGAP','PubChem_Cell_line' to list of ignored XDB IDS
          added handling of comment tags: 'Virology:', 'Senescence', 'Donor information:'

Oct 07, 2022
  parser: added 'ICLDB' to list of ignored XDB IDS

Sep 13, 2022
  no longer report synonym conflicts for synonyms shorter than 4 characters

Jun 27, 2022
  renamed distro to 'cellosaurus-pipeline' (was 'CellosaurusPipeline')
  parser: added support for XDB IDS: 'DSMZCellDive' and 'CancerTools'

Apr 06, 2022
  added handling of xdb ids: (Rockland, Innoprot)

Feb 21, 2022
  updated log4j to avoid zero day exploit
  fixed parser; added handling of xdb ids: (ignored: FlyBase_Cell_line, Abcam, NRFC; added: EGA)

Oct 13, 2021
  parser: added support fro XDB_ID 'SLKBase'; added patch for some malformed ORDO ids
  
Jun 01, 2021
  parser: added support for XDB ID 'PerkinElmer'; fixed logic for some new data

May 13, 2021
  annotator: improved summary

Feb 09, 2021
  parser: added support for XDB ID 'Horizon_Discovery'

Nov 24, 2020
  parser: added support for XDB ID 'Progenetix'

Sep 23, 2020
  annotator: put correct term names in annotations (not term acc ids)

Sep 18, 2020
  loader: better handling of species specific NCI ids

Sep 17, 2020
  loader: added loading of NCI ids (esp. species specific NCI ids) to RDO ontology

Jul 09, 2020
  parser: updated to handle newest data from Cellosaurus

Mar 26, 2020