@@ -24,14 +24,16 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'commons-net:commons-net:3.9.0'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.20.0.0'
-    implementation 'org.springframework:spring-beans:6.0.13'
-    implementation 'org.springframework:spring-jdbc:6.0.13'
+    implementation ('org.apache.commons:commons-dbcp2:2.11.0') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    implementation 'commons-net:commons-net:3.10.0'
+    implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    implementation 'org.apache.logging.log4j:log4j-core:2.22.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
+    implementation 'org.springframework:spring-jdbc:6.0.14'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
