@@ -111,6 +111,13 @@
                 <TimeBasedTriggeringPolicy interval="1"/>
             </Policies>
         </RollingFile>
+
+        <RollingFile name="warnings" append="true" fileName="logs/warnings.log" filePattern="logs/warnings.log.%d{yyyy-MM}">
+            <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
     </Appenders>
 
     <Loggers>
@@ -183,6 +190,11 @@
         </Logger>
         <Logger name="deleted_xdb_ids" level="debug" additivity="false">
             <AppenderRef ref="deleted_xdb_ids"/>
+            <AppenderRef ref="Console" level="info"/>
+        </Logger>
+
+        <Logger name="warnings" level="debug" additivity="false">
+            <AppenderRef ref="warnings"/>
             <AppenderRef ref="Console" level="info"/>
         </Logger>
     </Loggers>
